--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,12 @@
+/* google fonts */
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+
 @import "tailwindcss";
+
+@theme {
+  --font-primary: "Inter", sans-serif;
+  --color-primary: #3238f2;
+  --color-navLinkHover: #3238f2;
+  --color-headerBG: #fafafc;
+  --color-headline: #000000;
+}
